# Play_Sol_Hack

./: .gitignore  BANK_MODULE.md  ENGINE_MODULE.MD  README.MD  TODO.md  Unity_Status.MD  package.json
blockchain/: Anchor.toml  cargo-build-bpf  package-lock.json  package.json  tsconfig.json
blockchain/migrations/: deploy.ts
blockchain/programs/bank/: Cargo.toml
blockchain/programs/bank/src/: lib.rs
blockchain/programs/engine/: Cargo.toml
blockchain/programs/engine/src/: lib.rs
blockchain/scripts/: init-game.ts
blockchain/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
blockchain/test-ledger/rocksdb/: IDENTITY  LOG  MANIFEST-000005
blockchain/tests/: bank.ts  engine.ts
client/Assets/: SumoArena.unity
client/Assets/_Source/: GameSource.asmdef
client/Assets/_Source/Core/: GameState.cs  LobbyController.cs  Matchmaker.cs
client/Assets/_Source/Editor/: DataTest.cs
client/Assets/_Source/Games/Sumo/: NetworkSumo.cs  SumoGameController.cs
client/Assets/_Source/Games/Tanks/: NetworkTank.cs
client/Assets/_Source/Games/Tanks/Art/Materials/: BuildingGrey.mat  BuildingMetal.mat  BuildingWhite.mat  Dust.mat  Green.mat  OilDrums.mat  TankColour.mat  (+1 more)
client/Assets/_Source/Input/: PlayerInput.cs  PlayerInputBridge.cs
client/Assets/_Source/Networking/: IGameStateProvider.cs  MagicBlockClient.cs  MockGameStateProvider.cs  NetworkManager.cs  SessionKeyManager.cs  SolanaWalletAdapter.cs
client/Assets/_Source/Networking/Mock/: MockGameStateProvider.cs
client/Assets/_Source/Physics/: Interpolation.cs
client/ProjectSettings/: ProjectSettings.asset
client/Temp/: UnityConnectCache.json
client/Temp/__Backupscenes/: 0.backup
client/UserSettings/: EditorUserSettings.asset  Search.settings
client/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
(+5 files in other folders)
