[package]
name = "placeholder-bank"
version = "0.1.0"
description = "Standard Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "placeholder_bank"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
