[package]
name = "placeholder-engine"
version = "0.1.0"
description = "MagicBlock Ephemeral Physics Engine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "placeholder_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
ephemeral-rollups-sdk = { version = "0.0.1", features = ["anchor"] } 
