[package]
name = "placeholder-engine"
version = "0.1.0"
description = "MagicBlock Ephemeral Physics Engine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "placeholder_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
# Use the Git version which is guaranteed to have the 'anchor' feature
ephemeral-rollups-sdk = { git = "https://github.com/magicblock-labs/ephemeral-rollups-sdk.git", features = ["anchor"] } 
